@@ -220,17 +220,29 @@
       </p>
       <table class="configActions">
         <tr valign="top">
-          <td>
+          <td width="33%">
             <form name="convertAnnexes" action="convertAnnexes">
             <input class="context" type="submit" name="convertAnnexes"
                    value="pm_convert_annexes" i18n:attributes="value"/>&nbsp;&nbsp;
             </form>
           </td>
-          <td>
+          <td width="33%">
             <form name="updateAllLocalRolesForm" action="updateAllLocalRoles">
             <input class="context" type="submit" name="updateAllLocalRoles"
                    value="pm_update_all_local_roles" i18n:attributes="value"/>&nbsp;&nbsp;
             </form>
+            <p class="discreet" style="color: red;" i18n:translate="pm_update_all_local_roles_warning">
+                Warning: this will update every items and meetings of every configurations.  This action is also available per meeting configuration, if you only changed parameters in one meeting configuration, just execute the action on this meeting configuration!  Moreover, as an administrator, it is possible to update items and meetings from the dashboards.  To do this, select elements that need to be updated and use the \"Update from configuration\" batch action.
+            </p>
+          </td>
+          <td width="33%">
+            <form name="invalidateAllCacheForm" action="invalidateAllCache">
+            <input class="context" type="submit" name="invalidateAllCache"
+                   value="pm_invalidate_all_cache" i18n:attributes="value"/>&nbsp;&nbsp;
+            </form>
+            <p class="discreet" style="color: red;" i18n:translate="pm_invalidate_all_cache_warning">
+                Warning: this will invalidate all cache used in the application, this could lead to application being slow for some minutes until cache is recomputed for currently connected users but is harmless and must be done when changes impacting application header (tabs) are made or if any weirdness occurs (no access to new tabs, ...).
+            </p>
           </td>
         </tr>
       </table>
