@@ -20,7 +20,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   - to be able to cache annex content_category icon, adapted code so it works with full page caching;
   - get some informations asynchronously (portlet_todo, elements in collection portlet that may change (searchallmeetings term, counters);
   - linked items are loaded when collapsed section is opened;
-  - use tooltipster for MeetingItem.listType.
+  - use tooltipster for MeetingItem.listType;
+  - added action 'Invalidate all cache' on portal_plonemeeting to invalidate all cache.
 - Removed management of lateAttendees, if we have late attendees, we have to select user as present for meeting then set him
   as absent or excused from first item to item he joigned the meeting
 - Fixed bug in manage_item_signatures_form if field 'assembly' was not used.  Free text field 'signatures' may be used together
@@ -38,6 +39,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - When creating a MeetingConfig TTW, define 'searchmyitems' as default faceted collection so it is directly useable
 - Added possibility to easily reinitialize an advice delay if user is able to edit the item.  The 'Reinitialize delay' action is located on the advice
   popup behind the 'Change delay for advice' grey clock icon
+- Added action 'Update items and meetings' on the MeetingConfig to only update elements of selected MeetingConfig in addition to already existing
+  same action on portal_plonemeeting that will update items and meetings of every MeetingConfigs
 
 4.1b16 (2019-01-31)
 -------------------
